<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LogInActivity">

    <LinearLayout
        android:layout_margin="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/email"
            android:textSize="@dimen/user_text_size"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/user_text_size"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Password"
            android:textSize="@dimen/user_text_size"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:textSize="@dimen/user_text_size"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnLogIn"
        android:textSize="@dimen/btn_text"
        android:text="@string/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnRegister"
        android:textSize="@dimen/btn_text"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

<!--    <TextView-->
<!--        android:id="@+id/tvSignUp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:gravity="center"-->
<!--        android:textColor="@android:color/holo_blue_dark"-->
<!--        android:text="sign up"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"/>-->
</LinearLayout>